--- a/weather/example_local_settings.cfg
+++ b/weather/example_local_settings.cfg
@@ -6,7 +6,7 @@ DEBUG = True
 # memcached settings
 CACHE_TYPE = 'null'
 
-# radio.com settings
+# forecast.io settings
 FORECASTIO_API_KEY = '' # You need to get your own
 FORECASTIO_ROOT = 'https://api.forecast.io/forecast/'
 
